--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@futureverse/auth-react": "^4.2.2",
+    "@futureverse/auth-ui": "^0.17.0",
     "@tanstack/react-query": "^5.81.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
